--- a/node.js_笔记/ep31.处理表单get提交.md
+++ b/node.js_笔记/ep31.处理表单get提交.md
@@ -28,11 +28,11 @@ console.log(obj)
 //     ?name=咪路&mesage=怎么开始有点困了呢 是查询字符串
 ```
 
-![url模块运行](D:\Node.js笔记\辅助图片\url模块运行.PNG)t
+![url模块运行](https://github.com/yvonnelxq/Note-for-node/blob/main/node.js_%E7%AC%94%E8%AE%B0/relatedImages/ep31-1.PNG)
 
 true可将字符串转成对象 上图为无true 下图为有true 注意看query部分
 
-![url模块有true](D:\Node.js笔记\辅助图片\url模块有true.PNG)
+![url模块有true](https://github.com/yvonnelxq/Note-for-node/blob/main/node.js_%E7%AC%94%E8%AE%B0/relatedImages/ep31-2.PNG)
 
 ```javascript
 var url = require('url')
