--- a/node.js_笔记/ep38.模块系统-基本规则.md
+++ b/node.js_笔记/ep38.模块系统-基本规则.md
@@ -86,7 +86,7 @@ module.exports = 'hello'
 
 如果写多了成员，后者会覆盖前者
 
-![ep38模块系统导出单个对象](D:\Node.js笔记\辅助图片\ep38模块系统导出单个对象.PNG)
+![ep38模块系统导出单个对象](https://github.com/yvonnelxq/Note-for-node/blob/main/node.js_%E7%AC%94%E8%AE%B0/relatedImages/ep38.PNG)
 
 也可以这样来导出多个成员
 
